# nanobot

.github/workflows/: build-desktop.yml
apps/desktop/: .gitignore  onboard.html  package.json  pnpm-lock.yaml
apps/desktop/chat-ui/: index.html  onboard.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
nanobot/channels/: desktop.py
scripts/: build-desktop.sh  gateway_entry.py  nanobot-gateway.spec
