[package]
name = "nanobot"
version = "0.1.0"
description = "nanobot"
authors = ["nanobot"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "nanobot"

[[bin]]
name = "nanobot"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
url = "2"
